--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src/app.js --out-file public/scripts/app.js --watch"
+    "build": "babel src/app.js --out-file public/scripts/app.js --watch",
+    "fun": "babel src/fun/toggle.js --out-file public/scripts/app.js  --watch"
   },
   "repository": {
     "type": "git",
